2006-10-12  matthieu nottale  <nottale@gostai.com>

	r221: Lock fix.

	* parser/uparser.cc: Remove unneccessary &*.
	* lockable.h: Lock is now a recursive mutex.
	* userver.cc: Lock server in work.
	* userver.h: UServer inherits Lockable .
	* console.cc: Add missing headers.
	* uconnection.cc: Lock server in parse.

2006-10-12  Matthieu Nottale  <nottale@gostai.com>

	Add a much needed try/catch

	* network/bsdnet/network.cc: Add a try/catch, so that when a connection is destroyed in its notifyread, the call to notifyWrite on the deleted object does not bring the ship down.
	* lockable.h: Add a temporary #error in the aibo case to ensure locks are enabled.
	* console.cc: Add missing includes time.h and sys/time.h in !windows case.

2006-10-10  matthieu nottale  <nottale@gostai.com>

	Env defaults to engine. Add build dependency on bison.mk 

	* configure.ac: Default env is engine.
	* parser/bison/bison.mk: Add dependency on bison.mk.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	More robustness against flex 2.5.4.

	* parser/bison/bison.mk: std::ostream.
	Include iostream, not istream, since ostreams are used.
	* liburbi-c++/src/liburbi/uabstractclient.cpp: Instantiate
	in the same order as the declaration.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	Formatting changes.
	* userver.cc: Do it.
	* console.cc: Idem.
	* ughostconnection.cc: Idem.
	* liburbi-c++/src/liburbi/uabstractclient.cpp: Idem.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	console.
	* console.cc: New.
	* Makefile.am: Compile it.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	Hook liburbi to SUBDIRS.
	* Makefile.am (liburbi-ci): New .

2006-10-10  Akim Demaille  <demaille@gostai.com>

	Install fwd.hh.
	* Makefile.am: Do it.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	Use liburbi as an svn:externals.
	* configure.ac: Configure the subpackage liburbi-c++.
	* uobject/uobject.h, uobject/uext.h, uobject/common_uvalue.cc:
	Point to the local version of liburbi-c++.